@@ -29,6 +29,7 @@
 #include <kaboutdata.h>
 #include <klocale.h>
 #include <kiconloader.h>
+#include <kiconeffect.h>
 #include <kpopupmenu.h>
 #include <kurldrag.h>
 #include <kaction.h>
@@ -43,9 +44,19 @@
   * capabilities and the quit action.
   */
 DockWidget::DockWidget(KMainWidget * parent)
-    : KSystemTray(parent), ViewInterface(), timer( 0 )
+    : KSystemTray(parent), 
+      ViewInterface(), 
+      blinkTimer( 0 ),
+      overlay( 0 ),
+      alternateIcon( 0 ),
+      grayedIcon( 0 ),
+      overlayVisible( false )
 {
-    setPixmap( loadIcon( "dock" ));
+    baseIcon = new QPixmap( KSystemTray::loadIcon("dock") );
+    playOverlay = new QPixmap( SmallIcon( "dock_overlay_run" ) );
+    stopOverlay = new QPixmap( SmallIcon( "dock_overlay_stop" ) );
+    
+    paintIcon();
 
     // add preferences action to the context menu
     parent->actionCollection()->action("open_transfer")->plug(contextMenu());
@@ -61,7 +72,7 @@ DockWidget::DockWidget(KMainWidget * parent)
 // dtor: delete internal classes
 DockWidget::~DockWidget()
 {
-    delete timer;
+    delete blinkTimer;
 }
 
 // test if dropped thing can be handled (must be an URLlist or a QString)
@@ -99,35 +110,120 @@ void DockWidget::contextMenuAboutToShow ( KPopupMenu* menu )
 }
 
 // display blinking icon when downloading
-void DockWidget::setDownloading( bool blink )
+void DockWidget::setDownloading( bool running )
 {
-    if ( !blink )
+    if(!blinkTimer)
     {
-        if( timer )
-            timer->stop();
-        setPixmap( loadIcon( "dock" ));
+        blinkTimer = new QTimer;
+        connect( blinkTimer, SIGNAL( timeout() ), this, SLOT( slotTimeout() ) );
+    }
+    
+    overlayVisible = true;
+    
+    if(running)
+    {
+        overlay = playOverlay;
+        blinkTimer->start( 1500 );  // start 'blink' timer
+        paintIcon( 50, true );
     }
     else
-    {
-        if ( !timer )
-        {
-            timer = new QTimer;
-            connect( timer, SIGNAL( timeout() ), this, SLOT( slotTimeout() ) );
-        }
-        if ( !timer->isActive() )
-        {
-            iconOn = false;
-            setPixmap( loadIcon( "dock_off" ));
-        }
-        timer->start( 1000 );
+    {        
+        overlay = stopOverlay;
+        blinkTimer->start( 1500 );  // start 'hide' timer
+        paintIcon( 50, true );
     }
 }
 
 // slot executed every 1s: toggle icon pixmap
 void DockWidget::slotTimeout()
 {
-    iconOn = !iconOn;
-    setPixmap( loadIcon( iconOn ? "dock_on" : "dock_off" ));
+    if ( overlay == playOverlay )
+    {
+        overlayVisible = !overlayVisible;
+        paintIcon( 50/*mergeLevel*/, true );
+    }
+    else if( overlay == stopOverlay )
+    {
+        overlay = 0;
+        blinkTimer->stop();
+        paintIcon( -1, true );
+        overlayVisible = false;
+    }
+}
+
+void DockWidget::paintIcon( int mergePixels, bool force )
+{
+    // skip redrawing the same pixmap
+    static int mergePixelsCache = 0;
+    if ( mergePixels == mergePixelsCache && !force )
+         return;
+    mergePixelsCache = mergePixels;
+
+    if ( mergePixels < 0 )
+        return blendOverlay( baseIcon );
+        
+    // make up the grayed icon
+    if ( !grayedIcon )
+    {
+        QImage tmpTrayIcon = baseIcon->convertToImage();
+        KIconEffect::semiTransparent( tmpTrayIcon );
+        grayedIcon = new QPixmap( tmpTrayIcon );
+    }
+    if ( mergePixels == 0 )
+        return blendOverlay( grayedIcon );
+    
+    // make up the alternate icon (use hilight color but more saturated)
+    if ( !alternateIcon )
+    {
+        QImage tmpTrayIcon = baseIcon->convertToImage();
+        // eros: this looks cool with dark red blue or green but sucks with
+        // other colors (such as kde default's pale pink..). maybe the effect
+        // or the blended color has to be changed..
+        QColor saturatedColor = palette().active().highlight();
+        int hue, sat, value;
+        saturatedColor.getHsv( &hue, &sat, &value );
+        saturatedColor.setHsv( hue, (sat + 510) / 3, value );
+        KIconEffect::colorize( tmpTrayIcon, saturatedColor/* Qt::blue */, 0.9 );
+        alternateIcon = new QPixmap( tmpTrayIcon );
+    }
+    if ( mergePixels >= alternateIcon->height() )
+        return blendOverlay( alternateIcon );
+
+    // mix [ grayed <-> colored ] icons
+    QPixmap tmpTrayPixmap( *alternateIcon );
+   copyBlt( &tmpTrayPixmap, 0,0, grayedIcon, 0,0,
+            alternateIcon->width(), alternateIcon->height() - mergePixels );
+    blendOverlay( &tmpTrayPixmap );
+}
+
+void DockWidget::blendOverlay( QPixmap * sourcePixmap )
+{
+    if ( !overlayVisible || !overlay || overlay->isNull() )
+        return setPixmap( *sourcePixmap ); // @since 3.2
+    
+    // here comes the tricky part.. no kdefx functions are helping here.. :-(
+    // we have to blend pixmaps with different sizes (blending will be done in
+    // the bottom-left corner of source pixmap with a smaller overlay pixmap)
+    int opW = overlay->width(),
+        opH = overlay->height(),
+        opX = 1,
+        opY = sourcePixmap->height() - opH;
+
+    // get the rectangle where blending will take place 
+    QPixmap sourceCropped( opW, opH, sourcePixmap->depth() );
+    copyBlt( &sourceCropped, 0,0, sourcePixmap, opX,opY, opW,opH );
+
+    // blend the overlay image over the cropped rectangle
+    QImage blendedImage = sourceCropped.convertToImage();
+    QImage overlayImage = overlay->convertToImage();
+    KIconEffect::overlay( blendedImage, overlayImage );
+    sourceCropped.convertFromImage( blendedImage );
+    
+    // put back the blended rectangle to the original image
+    QPixmap sourcePixmapCopy = *sourcePixmap;
+    copyBlt( &sourcePixmapCopy, opX,opY, &sourceCropped, 0,0, opW,opH );
+
+    setPixmap( sourcePixmapCopy ); // @since 3.2
 }
 
 #include "docking.moc"
